// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createAccessLevelEntity should convert to entity 1`] = `
{
  "_class": [
    "Ruleset",
  ],
  "_key": "accessPolicies/368605946207/accessLevels/access_level_example",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "basic": {
          "conditions": [
            {
              "regions": [
                "US",
              ],
            },
          ],
        },
        "name": "accessPolicies/368605946207/accessLevels/access_level_example",
        "title": "access_level_example",
      },
    },
  ],
  "_type": "google_access_context_manager_access_level",
  "createdOn": undefined,
  "description": undefined,
  "displayName": "accessPolicies/368605946207/accessLevels/access_level_example",
  "name": "accessPolicies/368605946207/accessLevels/access_level_example",
  "title": "access_level_example",
}
`;

exports[`#createAccessPolicyEntity should convert to entity 1`] = `
{
  "_class": [
    "AccessPolicy",
  ],
  "_key": "accessPolicies/368605946207",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "etag": "64186ca0c82b01b4",
        "name": "accessPolicies/368605946207",
        "parent": "organizations/958457776463",
        "title": "default policy",
      },
    },
  ],
  "_type": "google_access_context_manager_access_policy",
  "createdOn": undefined,
  "displayName": "accessPolicies/368605946207",
  "etag": "64186ca0c82b01b4",
  "name": "accessPolicies/368605946207",
  "title": "default policy",
}
`;

exports[`#createServicePerimeterApiOperationEntity should convert to entity 1`] = `
{
  "_class": [
    "Configuration",
  ],
  "_key": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]:apiOperations[0]",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "serviceName": "storage.googleapis.com",
      },
    },
  ],
  "_type": "google_access_context_manager_service_perimeter_api_operation",
  "createdOn": undefined,
  "displayName": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]:operations[0]",
  "name": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]:operations[0]",
  "serviceName": "storage.googleapis.com",
}
`;

exports[`#createServicePerimeterEgressPolicyEntity should convert to entity 1`] = `
{
  "_class": [
    "ControlPolicy",
  ],
  "_key": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "egressFrom": {
          "identityType": "ANY_IDENTITY",
        },
        "egressTo": {
          "operations": [
            {
              "methodSelectors": [
                {
                  "method": "*",
                },
              ],
              "serviceName": "storage.googleapis.com",
            },
          ],
          "resources": [
            "projects/167984947943",
          ],
        },
      },
    },
  ],
  "_type": "google_access_context_manager_service_perimeter_egress_policy",
  "createdOn": undefined,
  "displayName": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]",
  "fromIdentities": undefined,
  "fromIdentityType": "ANY_IDENTITY",
  "name": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]",
}
`;

exports[`#createServicePerimeterEntity should convert to entity 1`] = `
{
  "_class": [
    "Configuration",
  ],
  "_key": "accessPolicies/368605946207/servicePerimeters/example_perimetere",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "name": "accessPolicies/368605946207/servicePerimeters/example_perimetere",
        "spec": undefined,
        "status": {
          "accessLevels": [
            "accessPolicies/368605946207/accessLevels/access_level_example",
          ],
          "egressPolicies": undefined,
          "ingressPolicies": undefined,
          "resources": [
            "projects/167984947943",
          ],
          "restrictedServices": [
            "storage.googleapis.com",
          ],
          "vpcAccessibleServices": {},
        },
        "title": "example_perimetere",
      },
    },
  ],
  "_type": "google_access_context_manager_service_perimeter",
  "active": undefined,
  "createdOn": undefined,
  "description": undefined,
  "displayName": "accessPolicies/368605946207/servicePerimeters/example_perimetere",
  "name": "accessPolicies/368605946207/servicePerimeters/example_perimetere",
  "perimeterType": undefined,
  "spec.accessLevels": undefined,
  "spec.resources": undefined,
  "spec.restrictedServices": undefined,
  "status.accessLevels": [
    "accessPolicies/368605946207/accessLevels/access_level_example",
  ],
  "status.resources": [
    "projects/167984947943",
  ],
  "status.restrictedServices": [
    "storage.googleapis.com",
  ],
  "title": "example_perimetere",
  "useExplicitDryRunSpec": undefined,
}
`;

exports[`#createServicePerimeterIngressPolicyEntity should convert to entity 1`] = `
{
  "_class": [
    "ControlPolicy",
  ],
  "_key": "accessPolicies/368605946207/servicePerimeters/example_perimetere:ingressPolicies[0]",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ingressFrom": {
          "identityType": "ANY_IDENTITY",
          "sources": [
            {
              "accessLevel": "accessPolicies/368605946207/accessLevels/access_level_example",
            },
          ],
        },
        "ingressTo": {
          "operations": [
            {
              "methodSelectors": [
                {
                  "method": "*",
                },
              ],
              "serviceName": "storage.googleapis.com",
            },
          ],
          "resources": [
            "projects/167984947943",
          ],
        },
      },
    },
  ],
  "_type": "google_access_context_manager_service_perimeter_ingress_policy",
  "createdOn": undefined,
  "displayName": "accessPolicies/368605946207/servicePerimeters/example_perimetere:ingressPolicies[0]",
  "fromIdentities": undefined,
  "fromIdentityType": "ANY_IDENTITY",
  "name": "accessPolicies/368605946207/servicePerimeters/example_perimetere:ingressPolicies[0]",
}
`;

exports[`#createServicePerimeterMethodSelectorEntity should convert to entity 1`] = `
{
  "_class": [
    "Configuration",
  ],
  "_key": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]:apiOperations[0]:methodSelectors[0]",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "method": "*",
      },
    },
  ],
  "_type": "google_access_context_manager_service_perimeter_method_selector",
  "createdOn": undefined,
  "displayName": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]:apiOperations[0]:methodSelectors[0]",
  "method": "*",
  "name": "accessPolicies/368605946207/servicePerimeters/example_perimetere:egressPolicies[0]:apiOperations[0]:methodSelectors[0]",
  "permission": undefined,
}
`;
